playing around with HTML template

--- a/versus.html
+++ b/versus.html
@@ -1,14 +1,14 @@
 <head>
-  <title>versus</title>
+  <title>Versus</title>
 </head>
 
 <body>
-  <h1>Welcome to Meteor!</h1>
+  <h1>Welcome to Versus!</h1>
 
   {{> hello}}
 </body>
 
 <template name="hello">
   <button>Click Me</button>
-  <p>You've pressed the button {{counter}} times.</p>
+  <p>You've pressed the button {{counter}} times this instance.</p>
 </template>
