--- a/versus.html
+++ b/versus.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-<html>
 <head>
   <title>Versus</title>
   <meta name="viewport" content="width=device-width, initial-scale= 1.0">
@@ -19,19 +17,19 @@
 <div class="container-fluid" id="header_ui">
 	<div class="row">
 		<div class="col-xs-1" rowspan="2">
-			<img class="img-thumbnail" id="thumb-left" src={{thumb_left}}>
+			<img class="img-thumbnail" id="thumb-left" src="{{thumb_left}}">
 		</div>
 
 		<div class="container col-xs-4">
 			<div class="name row" id="name-left">{{name_left}}</div>
-			<div class="bar row" id="bar-left">&nbsp</div>
+			<div class="bar row" id="bar-left">&nbsp;</div>
 		</div>
 
 		<div class="col-xs-2 text-center" id="timer">99</div>
 
 		<div class="container col-xs-4">
 			<div class="name row text-right" id="name-right">{{name_right}}</div>
-			<div class="bar row text-right" id="bar-right">&nbsp</div>
+			<div class="bar row text-right" id="bar-right">&nbsp;</div>
 		</div>
 
 		<div class="col-xs-1">
@@ -48,4 +46,3 @@
   <p>You've pressed the button {{counter}} times this instance.</p>
 </template>
 
-</html>
